--- a/notebooks/04_transform_ts_data_into_features_and_targets.ipynb
+++ b/notebooks/04_transform_ts_data_into_features_and_targets.ipynb
@@ -1418,7 +1418,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "taxi_env",
    "language": "python",
    "name": "python3"
   },
