--- a/notebooks/10_lgm_with_fe.ipynb
+++ b/notebooks/10_lgm_with_fe.ipynb
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "9a8b3f91-7c69-4cbb-88c9-e3f0ed7464e0",
    "metadata": {},
    "outputs": [],
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "47ffe1b8-20d4-420a-997d-a7c19cfa39f2",
    "metadata": {},
    "outputs": [
@@ -1283,7 +1283,7 @@
        "[55900 rows x 675 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "e5633c24-9658-4224-b4cb-4a7a8397803a",
    "metadata": {},
    "outputs": [],
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "be2dadf5-c49d-4915-bc0d-091048a2f920",
    "metadata": {},
    "outputs": [
@@ -1688,7 +1688,7 @@
        "[55900 rows x 675 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1699,17 +1699,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "86c1f78e-4739-491b-90ca-bb393ebead8d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py:136: UserWarning: Could not find the number of physical cores for the following reason:\n",
+      "[WinError 2] The system cannot find the file specified\n",
+      "Returning the number of logical cores instead. You can silence this warning by setting LOKY_MAX_CPU_COUNT to the number of cores you want to use.\n",
+      "  warnings.warn(\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 257, in _count_physical_cores\n",
+      "    cpu_info = subprocess.run(\n",
+      "               ^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 548, in run\n",
+      "    with Popen(*popenargs, **kwargs) as process:\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 1026, in __init__\n",
+      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 1538, in _execute_child\n",
+      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
+      "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.047362 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.269691 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 159913\n",
       "[LightGBM] [Info] Number of data points in the train set: 55900, number of used features: 674\n",
       "[LightGBM] [Info] Start training from score 11.110286\n"
@@ -2123,21 +2143,21 @@
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
        "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;functiontransformer&#x27;,\n",
-       "                 FunctionTransformer(func=&lt;function average_rides_last_4_weeks at 0x13a45d260&gt;)),\n",
+       "                 FunctionTransformer(func=&lt;function average_rides_last_4_weeks at 0x0000021B31153CE0&gt;)),\n",
        "                (&#x27;temporalfeatureengineer&#x27;, TemporalFeatureEngineer()),\n",
        "                (&#x27;lgbmregressor&#x27;, LGBMRegressor())])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;Pipeline<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.pipeline.Pipeline.html\">?<span>Documentation for Pipeline</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;functiontransformer&#x27;,\n",
-       "                 FunctionTransformer(func=&lt;function average_rides_last_4_weeks at 0x13a45d260&gt;)),\n",
+       "                 FunctionTransformer(func=&lt;function average_rides_last_4_weeks at 0x0000021B31153CE0&gt;)),\n",
        "                (&#x27;temporalfeatureengineer&#x27;, TemporalFeatureEngineer()),\n",
-       "                (&#x27;lgbmregressor&#x27;, LGBMRegressor())])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;FunctionTransformer<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.preprocessing.FunctionTransformer.html\">?<span>Documentation for FunctionTransformer</span></a></label><div class=\"sk-toggleable__content fitted\"><pre>FunctionTransformer(func=&lt;function average_rides_last_4_weeks at 0x13a45d260&gt;)</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">TemporalFeatureEngineer</label><div class=\"sk-toggleable__content fitted\"><pre>TemporalFeatureEngineer()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">LGBMRegressor</label><div class=\"sk-toggleable__content fitted\"><pre>LGBMRegressor()</pre></div> </div></div></div></div></div></div>"
+       "                (&#x27;lgbmregressor&#x27;, LGBMRegressor())])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;FunctionTransformer<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.preprocessing.FunctionTransformer.html\">?<span>Documentation for FunctionTransformer</span></a></label><div class=\"sk-toggleable__content fitted\"><pre>FunctionTransformer(func=&lt;function average_rides_last_4_weeks at 0x0000021B31153CE0&gt;)</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">TemporalFeatureEngineer</label><div class=\"sk-toggleable__content fitted\"><pre>TemporalFeatureEngineer()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">LGBMRegressor</label><div class=\"sk-toggleable__content fitted\"><pre>LGBMRegressor()</pre></div> </div></div></div></div></div></div>"
       ],
       "text/plain": [
        "Pipeline(steps=[('functiontransformer',\n",
-       "                 FunctionTransformer(func=<function average_rides_last_4_weeks at 0x13a45d260>)),\n",
+       "                 FunctionTransformer(func=<function average_rides_last_4_weeks at 0x0000021B31153CE0>)),\n",
        "                ('temporalfeatureengineer', TemporalFeatureEngineer()),\n",
        "                ('lgbmregressor', LGBMRegressor())])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2148,7 +2168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "1289a83e-250a-415e-a764-1b8b2bca9967",
    "metadata": {},
    "outputs": [],
@@ -2159,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "505b6eab-918d-491b-938f-11d587010b29",
    "metadata": {},
    "outputs": [
@@ -2178,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "bf4222ed-df47-4682-9187-44bc27aa6cb8",
    "metadata": {},
    "outputs": [
@@ -2187,14 +2207,35 @@
      "output_type": "stream",
      "text": [
       "INFO:src.experiment_utils:MLflow tracking URI and credentials set.\n",
-      "2025/03/03 23:04:16 INFO mlflow.tracking.fluent: Experiment with name 'LGBMRegressorWFE' does not exist. Creating a new experiment.\n",
+      "2025/03/05 22:42:16 INFO mlflow.tracking.fluent: Experiment with name 'LGBMRegressorWFE' does not exist. Creating a new experiment.\n",
       "INFO:src.experiment_utils:Experiment set to: LGBMRegressorWFE\n",
       "INFO:src.experiment_utils:Logged mean_absolute_error: 3.2202096961963047\n",
-      "/opt/anaconda3/envs/nyctaxi/lib/python3.11/site-packages/mlflow/types/utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "INFO:src.experiment_utils:Model signature inferred.\n",
+      "INFO:src.experiment_utils:Model signature inferred.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eeb321a544e5415d97ab1a7e8acf207f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/05 22:42:51 INFO mlflow.models.model: Found the following environment variables used during model inference: [HOPSWORK_API_KEY]. Please check if you need to set them when deploying the model. To disable this message, set environment variable `MLFLOW_RECORD_ENV_VARS_IN_MODEL_LOGGING` to `false`.\n",
       "Successfully registered model 'Pipeline'.\n",
-      "2025/03/03 23:08:47 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: Pipeline, version 1\n",
+      "2025/03/05 22:46:48 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: Pipeline, version 1\n",
       "Created version '1' of model 'Pipeline'.\n",
       "INFO:src.experiment_utils:Model logged with name: Pipeline\n"
      ]
@@ -2203,17 +2244,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🏃 View run bemused-yak-752 at: https://dagshub.com/ramprakashyallavula/NYCTAXI.mlflow/#/experiments/5/runs/f8b286ddf1cb47278d59e4d326a2d6af\n",
-      "🧪 View experiment at: https://dagshub.com/ramprakashyallavula/NYCTAXI.mlflow/#/experiments/5\n"
+      "🏃 View run kindly-pug-295 at: https://dagshub.com/Janardhan-Guntaka/taxi_env.mlflow/#/experiments/5/runs/7837e813d74b43d0bc8941df63a93015\n",
+      "🧪 View experiment at: https://dagshub.com/Janardhan-Guntaka/taxi_env.mlflow/#/experiments/5\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mlflow.models.model.ModelInfo at 0x15db56510>"
+       "<mlflow.models.model.ModelInfo at 0x21bacf7e050>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2255,7 +2296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "taxi_env",
    "language": "python",
    "name": "python3"
   },
