--- a/notebooks/16_inference_pipeline.ipynb
+++ b/notebooks/16_inference_pipeline.ipynb
@@ -47,13 +47,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-04 12:14:08,916 INFO: Initializing external client\n",
-      "2025-03-04 12:14:08,916 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-03-04 12:14:09,571 INFO: Python Engine initialized.\n",
+      "2025-03-06 00:21:34,977 INFO: Initializing external client\n",
+      "2025-03-06 00:21:34,977 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-03-06 00:21:35,776 INFO: Python Engine initialized.\n",
       "\n",
-      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1215680\n",
-      "Fetching data from 2025-02-03 17:14:08.915891+00:00 to 2025-03-04 16:14:08.915891+00:00\n",
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (4.47s) \n"
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1214691\n",
+      "Fetching data from 2025-02-05 05:21:34.977593+00:00 to 2025-03-06 04:21:34.977593+00:00\n",
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (4.53s) \n"
      ]
     }
    ],
@@ -96,14 +96,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-04 12:14:22,285 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-03-06 00:21:46,540 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-03-04 12:14:22,287 INFO: Initializing external client\n",
-      "2025-03-04 12:14:22,287 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-03-04 12:14:22,888 INFO: Python Engine initialized.\n",
+      "2025-03-06 00:21:46,553 INFO: Initializing external client\n",
+      "2025-03-06 00:21:46,553 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-03-06 00:21:47,298 INFO: Python Engine initialized.\n",
       "\n",
-      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1215680\n",
-      "Downloading model artifact (0 dirs, 1 files)... DONE"
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1214691\n",
+      "Downloading model artifact (0 dirs, 1 files)... DONE\r"
      ]
     }
    ],
@@ -118,7 +118,28 @@
    "execution_count": 6,
    "id": "b868f801-03a3-4d51-8e24-88231e664f29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UserWarning: Could not find the number of physical cores for the following reason:\n",
+      "[WinError 2] The system cannot find the file specified\n",
+      "Returning the number of logical cores instead. You can silence this warning by setting LOKY_MAX_CPU_COUNT to the number of cores you want to use.\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 257, in _count_physical_cores\n",
+      "    cpu_info = subprocess.run(\n",
+      "               ^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 548, in run\n",
+      "    with Popen(*popenargs, **kwargs) as process:\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 1026, in __init__\n",
+      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 1538, in _execute_child\n",
+      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
+      "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n"
+     ]
+    }
+   ],
    "source": [
     "from src.inference import get_model_predictions\n",
     "predictions = get_model_predictions(model, features)"
@@ -159,33 +180,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>255</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2025-03-04 18:00:00+00:00</td>\n",
+       "      <td>263</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2025-03-06 06:00:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>112</td>\n",
+       "      <td>255</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2025-03-04 18:00:00+00:00</td>\n",
+       "      <td>2025-03-06 06:00:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>218</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2025-03-04 18:00:00+00:00</td>\n",
+       "      <td>69</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2025-03-06 06:00:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>237</td>\n",
-       "      <td>304.0</td>\n",
-       "      <td>2025-03-04 18:00:00+00:00</td>\n",
+       "      <td>155</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2025-03-06 06:00:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>57</td>\n",
+       "      <td>171</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2025-03-04 18:00:00+00:00</td>\n",
+       "      <td>2025-03-06 06:00:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -194,55 +215,55 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>187</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2025-03-04 18:00:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>247</th>\n",
-       "      <td>71</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2025-03-04 18:00:00+00:00</td>\n",
+       "      <td>173</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2025-03-06 06:00:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>248</th>\n",
-       "      <td>8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2025-03-04 18:00:00+00:00</td>\n",
+       "      <td>157</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-03-06 06:00:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>249</th>\n",
-       "      <td>168</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2025-03-04 18:00:00+00:00</td>\n",
+       "      <td>94</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2025-03-06 06:00:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>250</th>\n",
-       "      <td>186</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>2025-03-04 18:00:00+00:00</td>\n",
+       "      <td>97</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-03-06 06:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>79</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>2025-03-06 06:00:00+00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>251 rows × 3 columns</p>\n",
+       "<p>252 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     pickup_location_id  predicted_demand               pickup_hour\n",
-       "0                   255               3.0 2025-03-04 18:00:00+00:00\n",
-       "1                   112               1.0 2025-03-04 18:00:00+00:00\n",
-       "2                   218               1.0 2025-03-04 18:00:00+00:00\n",
-       "3                   237             304.0 2025-03-04 18:00:00+00:00\n",
-       "4                    57               0.0 2025-03-04 18:00:00+00:00\n",
+       "0                   263              52.0 2025-03-06 06:00:00+00:00\n",
+       "1                   255               1.0 2025-03-06 06:00:00+00:00\n",
+       "2                    69               0.0 2025-03-06 06:00:00+00:00\n",
+       "3                   155               0.0 2025-03-06 06:00:00+00:00\n",
+       "4                   171               0.0 2025-03-06 06:00:00+00:00\n",
        "..                  ...               ...                       ...\n",
-       "246                 187               0.0 2025-03-04 18:00:00+00:00\n",
-       "247                  71               1.0 2025-03-04 18:00:00+00:00\n",
-       "248                   8               0.0 2025-03-04 18:00:00+00:00\n",
-       "249                 168               1.0 2025-03-04 18:00:00+00:00\n",
-       "250                 186             140.0 2025-03-04 18:00:00+00:00\n",
+       "247                 173               0.0 2025-03-06 06:00:00+00:00\n",
+       "248                 157               1.0 2025-03-06 06:00:00+00:00\n",
+       "249                  94               0.0 2025-03-06 06:00:00+00:00\n",
+       "250                  97               1.0 2025-03-06 06:00:00+00:00\n",
+       "251                  79              83.0 2025-03-06 06:00:00+00:00\n",
        "\n",
-       "[251 rows x 3 columns]"
+       "[252 rows x 3 columns]"
       ]
      },
      "execution_count": 7,
@@ -265,13 +286,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-04 12:14:25,238 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-03-06 00:21:49,578 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-03-04 12:14:25,239 INFO: Initializing external client\n",
-      "2025-03-04 12:14:25,240 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-03-04 12:14:26,060 INFO: Python Engine initialized.\n",
+      "2025-03-06 00:21:49,584 INFO: Initializing external client\n",
+      "2025-03-06 00:21:49,584 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-03-06 00:21:50,364 INFO: Python Engine initialized.\n",
       "\n",
-      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1215680\n"
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1214691\n"
      ]
     }
    ],
@@ -294,10 +315,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature Group created successfully, explore it at \n",
+      "https://c.app.hopsworks.ai:443/p/1214691/fs/1202327/fg/1403595\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |██████████████████████████████████████████| Rows 251/251 | Elapsed Time: 00:00 | Remaining Time: 00:00\n"
+      "Uploading Dataframe: 100.00% |██████████| Rows 252/252 | Elapsed Time: 00:00 | Remaining Time: 00:00\n"
      ]
     },
     {
@@ -306,7 +335,7 @@
      "text": [
       "Launching job: taxi_hourly_model_prediction_1_offline_fg_materialization\n",
       "Job started successfully, you can follow the progress at \n",
-      "https://c.app.hopsworks.ai:443/p/1215680/jobs/named/taxi_hourly_model_prediction_1_offline_fg_materialization/executions\n"
+      "https://c.app.hopsworks.ai:443/p/1214691/jobs/named/taxi_hourly_model_prediction_1_offline_fg_materialization/executions\n"
      ]
     },
     {
@@ -328,7 +357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "taxi_env",
    "language": "python",
    "name": "python3"
   },
