--- a/notebooks/08_xgboost_model.ipynb
+++ b/notebooks/08_xgboost_model.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "73297e4f-e82a-49ec-b177-f644800ab0c8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e86985b7-a573-41b2-9879-cb384ea6bc93",
    "metadata": {},
    "outputs": [],
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "d23d044b-effa-4344-8772-109fd8e925fe",
    "metadata": {},
    "outputs": [
@@ -410,7 +401,7 @@
        "[87620 rows x 675 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "81fbd680-5358-4bef-93a9-6a3ab35e60c8",
    "metadata": {},
    "outputs": [
@@ -459,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "1d565c5b-3342-4a0a-931f-8bff4db55f14",
    "metadata": {},
    "outputs": [
@@ -833,7 +824,7 @@
        "[55900 rows x 674 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "d3a49d2b-848b-4202-bc03-aa571fd83b94",
    "metadata": {},
    "outputs": [],
@@ -856,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "d2f09e06-4431-4998-8692-0dc48c6a2fb6",
    "metadata": {},
    "outputs": [
@@ -864,9 +855,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: xgboost in /opt/anaconda3/envs/nyctaxi/lib/python3.11/site-packages (2.1.4)\n",
-      "Requirement already satisfied: numpy in /opt/anaconda3/envs/nyctaxi/lib/python3.11/site-packages (from xgboost) (1.23.5)\n",
-      "Requirement already satisfied: scipy in /opt/anaconda3/envs/nyctaxi/lib/python3.11/site-packages (from xgboost) (1.15.2)\n",
+      "Requirement already satisfied: xgboost in c:\\users\\2003j\\anaconda3\\envs\\taxi_env\\lib\\site-packages (2.1.4)\n",
+      "Requirement already satisfied: numpy in c:\\users\\2003j\\anaconda3\\envs\\taxi_env\\lib\\site-packages (from xgboost) (1.23.5)\n",
+      "Requirement already satisfied: scipy in c:\\users\\2003j\\anaconda3\\envs\\taxi_env\\lib\\site-packages (from xgboost) (1.15.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -877,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "92be5304-41a7-4b53-9b73-2a89503468b4",
    "metadata": {
     "scrolled": true
@@ -1326,7 +1317,7 @@
        "             num_parallel_tree=None, random_state=None, ...)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "5658d31d-2a23-4a2d-87be-9407c6ae7f9c",
    "metadata": {},
    "outputs": [],
@@ -1350,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "577273e8-3b8c-44ee-917a-9b207f57bbca",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "fac3faac-b90b-42f3-9dbd-77522e4ebc20",
    "metadata": {},
    "outputs": [
@@ -1378,14 +1369,35 @@
      "output_type": "stream",
      "text": [
       "INFO:src.experiment_utils:MLflow tracking URI and credentials set.\n",
-      "2025/03/03 22:51:56 INFO mlflow.tracking.fluent: Experiment with name 'XGBoost' does not exist. Creating a new experiment.\n",
+      "2025/03/05 22:00:53 INFO mlflow.tracking.fluent: Experiment with name 'XGBoost' does not exist. Creating a new experiment.\n",
       "INFO:src.experiment_utils:Experiment set to: XGBoost\n",
       "INFO:src.experiment_utils:Logged mean_absolute_error: 3.458620309829712\n",
-      "/opt/anaconda3/envs/nyctaxi/lib/python3.11/site-packages/mlflow/types/utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "INFO:src.experiment_utils:Model signature inferred.\n",
+      "INFO:src.experiment_utils:Model signature inferred.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a0f4bd7d1fdf4607a3ff17dbe7ca39ab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/05 22:01:27 INFO mlflow.models.model: Found the following environment variables used during model inference: [HOPSWORK_API_KEY]. Please check if you need to set them when deploying the model. To disable this message, set environment variable `MLFLOW_RECORD_ENV_VARS_IN_MODEL_LOGGING` to `false`.\n",
       "Successfully registered model 'XGBRegressor'.\n",
-      "2025/03/03 22:57:36 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: XGBRegressor, version 1\n",
+      "2025/03/05 22:05:22 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: XGBRegressor, version 1\n",
       "Created version '1' of model 'XGBRegressor'.\n",
       "INFO:src.experiment_utils:Model logged with name: XGBRegressor\n"
      ]
@@ -1394,17 +1406,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🏃 View run aged-panda-598 at: https://dagshub.com/ramprakashyallavula/NYCTAXI.mlflow/#/experiments/3/runs/7a42ce11862d4580946c5f5031639145\n",
-      "🧪 View experiment at: https://dagshub.com/ramprakashyallavula/NYCTAXI.mlflow/#/experiments/3\n"
+      "🏃 View run capricious-mouse-134 at: https://dagshub.com/Janardhan-Guntaka/taxi_env.mlflow/#/experiments/3/runs/fcb833607f6b42e4970fa19dddccccb8\n",
+      "🧪 View experiment at: https://dagshub.com/Janardhan-Guntaka/taxi_env.mlflow/#/experiments/3\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mlflow.models.model.ModelInfo at 0x162a03750>"
+       "<mlflow.models.model.ModelInfo at 0x150d010e9d0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,7 +1442,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "taxi_env",
    "language": "python",
    "name": "python3"
   },
