--- a/notebooks/09_lightgbm_model.ipynb
+++ b/notebooks/09_lightgbm_model.ipynb
@@ -91,12 +91,32 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py:136: UserWarning: Could not find the number of physical cores for the following reason:\n",
+      "[WinError 2] The system cannot find the file specified\n",
+      "Returning the number of logical cores instead. You can silence this warning by setting LOKY_MAX_CPU_COUNT to the number of cores you want to use.\n",
+      "  warnings.warn(\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 257, in _count_physical_cores\n",
+      "    cpu_info = subprocess.run(\n",
+      "               ^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 548, in run\n",
+      "    with Popen(*popenargs, **kwargs) as process:\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 1026, in __init__\n",
+      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 1538, in _execute_child\n",
+      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
+      "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.048779 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.165214 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 159651\n",
       "[LightGBM] [Info] Number of data points in the train set: 55900, number of used features: 672\n",
       "[LightGBM] [Info] Start training from score 11.110286\n"
@@ -567,14 +587,36 @@
      "output_type": "stream",
      "text": [
       "INFO:src.experiment_utils:MLflow tracking URI and credentials set.\n",
-      "2025/03/03 22:58:09 INFO mlflow.tracking.fluent: Experiment with name 'LGBMRegressor' does not exist. Creating a new experiment.\n",
+      "2025/03/05 22:06:43 INFO mlflow.tracking.fluent: Experiment with name 'LGBMRegressor' does not exist. Creating a new experiment.\n",
       "INFO:src.experiment_utils:Experiment set to: LGBMRegressor\n",
       "INFO:src.experiment_utils:Logged mean_absolute_error: 3.3054128762542527\n",
-      "/opt/anaconda3/envs/nyctaxi/lib/python3.11/site-packages/mlflow/types/utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "INFO:src.experiment_utils:Model signature inferred.\n",
+      "INFO:src.experiment_utils:Model signature inferred.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee46cd964945469293c0009d2b5a8b15",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/05 22:07:18 INFO mlflow.models.model: Found the following environment variables used during model inference: [HOPSWORK_API_KEY]. Please check if you need to set them when deploying the model. To disable this message, set environment variable `MLFLOW_RECORD_ENV_VARS_IN_MODEL_LOGGING` to `false`.\n",
+      "WARNING:urllib3.connectionpool:Retrying (Retry(total=6, connect=7, read=7, redirect=7, status=7)) after connection broken by 'SSLEOFError(8, 'EOF occurred in violation of protocol (_ssl.c:2427)')': /Janardhan-Guntaka/taxi_env.mlflow/api/2.0/mlflow-artifacts/artifacts/fcab290d58d44b84a1d578f71d06edad/36fbe77bb91d4c90935d622c50a34195/artifacts/model_artifact/input_example.json\n",
       "Successfully registered model 'LGBMRegressor'.\n",
-      "2025/03/03 23:02:19 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: LGBMRegressor, version 1\n",
+      "2025/03/05 22:11:46 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: LGBMRegressor, version 1\n",
       "Created version '1' of model 'LGBMRegressor'.\n",
       "INFO:src.experiment_utils:Model logged with name: LGBMRegressor\n"
      ]
@@ -583,14 +625,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🏃 View run merciful-mole-418 at: https://dagshub.com/ramprakashyallavula/NYCTAXI.mlflow/#/experiments/4/runs/c577e21f678d46e8a4cfa86690f6a4a9\n",
-      "🧪 View experiment at: https://dagshub.com/ramprakashyallavula/NYCTAXI.mlflow/#/experiments/4\n"
+      "🏃 View run resilient-flea-366 at: https://dagshub.com/Janardhan-Guntaka/taxi_env.mlflow/#/experiments/4/runs/36fbe77bb91d4c90935d622c50a34195\n",
+      "🧪 View experiment at: https://dagshub.com/Janardhan-Guntaka/taxi_env.mlflow/#/experiments/4\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mlflow.models.model.ModelInfo at 0x33dbba850>"
+       "<mlflow.models.model.ModelInfo at 0x18a5f8e0e90>"
       ]
      },
      "execution_count": 9,
@@ -611,7 +653,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "taxi_env",
    "language": "python",
    "name": "python3"
   },
