--- a/notebooks/11_lgm_hyper.ipynb
+++ b/notebooks/11_lgm_hyper.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "2e9c9c08-9021-455a-94d0-bf60660a73ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "f93a3583-f5c0-48f0-bc32-6236fac08fd2",
    "metadata": {},
    "outputs": [],
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "40a44a70-cdf0-4176-aab1-3769945191a9",
    "metadata": {},
    "outputs": [],
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "ec549d57-97a0-49e1-b95f-fc607c8e6d53",
    "metadata": {},
    "outputs": [
@@ -74,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "d3df414d-1d40-4991-b696-68073aba61c9",
    "metadata": {},
    "outputs": [
@@ -108,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "220f589e-0e77-4473-a2c0-57dd373725e4",
    "metadata": {},
    "outputs": [],
@@ -140,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "af77cc38-4583-4a51-ac79-897e6e4e438d",
    "metadata": {},
    "outputs": [],
@@ -164,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "27b7885a-de5c-428c-8b9a-c47f3d6a469c",
    "metadata": {},
    "outputs": [],
@@ -182,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "43f257e8-39dc-422f-902b-1624c62620b2",
    "metadata": {},
    "outputs": [
@@ -190,7 +181,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/nyctaxi/lib/python3.11/site-packages/sklearn/model_selection/_search.py:320: UserWarning: The total space of parameters 4 is smaller than n_iter=5. Running 4 iterations. For exhaustive searches, use GridSearchCV.\n",
+      "c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:320: UserWarning: The total space of parameters 4 is smaller than n_iter=5. Running 4 iterations. For exhaustive searches, use GridSearchCV.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -198,94 +189,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 4 candidates, totalling 12 fits\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.029695 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "Fitting 3 folds for each of 4 candidates, totalling 12 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py:136: UserWarning: Could not find the number of physical cores for the following reason:\n",
+      "[WinError 2] The system cannot find the file specified\n",
+      "Returning the number of logical cores instead. You can silence this warning by setting LOKY_MAX_CPU_COUNT to the number of cores you want to use.\n",
+      "  warnings.warn(\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 257, in _count_physical_cores\n",
+      "    cpu_info = subprocess.run(\n",
+      "               ^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 548, in run\n",
+      "    with Popen(*popenargs, **kwargs) as process:\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 1026, in __init__\n",
+      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
+      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 1538, in _execute_child\n",
+      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
+      "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.147585 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 156723\n",
       "[LightGBM] [Info] Number of data points in the train set: 37266, number of used features: 674\n",
       "[LightGBM] [Info] Start training from score 13.482799\n",
-      "[CV] END ........................lgbmregressor__num_leaves=2; total time=   0.9s\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.037045 seconds.\n",
+      "[CV] END ........................lgbmregressor__num_leaves=2; total time=   1.9s\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.128828 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 153420\n",
+      "[LightGBM] [Info] Number of data points in the train set: 37267, number of used features: 674\n",
+      "[LightGBM] [Info] Start training from score 8.169855\n",
+      "[CV] END ........................lgbmregressor__num_leaves=2; total time=   1.8s\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.206488 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 155219\n",
+      "[LightGBM] [Info] Number of data points in the train set: 37267, number of used features: 674\n",
+      "[LightGBM] [Info] Start training from score 11.678268\n",
+      "[CV] END ........................lgbmregressor__num_leaves=2; total time=   3.0s\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.108551 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 156723\n",
+      "[LightGBM] [Info] Number of data points in the train set: 37266, number of used features: 674\n",
+      "[LightGBM] [Info] Start training from score 13.482799\n",
+      "[CV] END .......................lgbmregressor__num_leaves=50; total time=   7.7s\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.170177 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 153420\n",
+      "[LightGBM] [Info] Number of data points in the train set: 37267, number of used features: 674\n",
+      "[LightGBM] [Info] Start training from score 8.169855\n",
+      "[CV] END .......................lgbmregressor__num_leaves=50; total time=   7.6s\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.148166 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 155219\n",
+      "[LightGBM] [Info] Number of data points in the train set: 37267, number of used features: 674\n",
+      "[LightGBM] [Info] Start training from score 11.678268\n",
+      "[CV] END .......................lgbmregressor__num_leaves=50; total time=   7.8s\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.159868 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 156723\n",
+      "[LightGBM] [Info] Number of data points in the train set: 37266, number of used features: 674\n",
+      "[LightGBM] [Info] Start training from score 13.482799\n",
+      "[CV] END .......................lgbmregressor__num_leaves=70; total time=   7.6s\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.094703 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 153420\n",
       "[LightGBM] [Info] Number of data points in the train set: 37267, number of used features: 674\n",
       "[LightGBM] [Info] Start training from score 8.169855\n",
-      "[CV] END ........................lgbmregressor__num_leaves=2; total time=   0.8s\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.035004 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[CV] END .......................lgbmregressor__num_leaves=70; total time=   7.1s\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.154035 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 155219\n",
       "[LightGBM] [Info] Number of data points in the train set: 37267, number of used features: 674\n",
       "[LightGBM] [Info] Start training from score 11.678268\n",
-      "[CV] END ........................lgbmregressor__num_leaves=2; total time=   0.8s\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.030755 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[CV] END .......................lgbmregressor__num_leaves=70; total time=   6.2s\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.210230 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 156723\n",
       "[LightGBM] [Info] Number of data points in the train set: 37266, number of used features: 674\n",
       "[LightGBM] [Info] Start training from score 13.482799\n",
-      "[CV] END .......................lgbmregressor__num_leaves=50; total time=   2.4s\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.038092 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[CV] END ......................lgbmregressor__num_leaves=256; total time=  15.5s\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.144314 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 153420\n",
       "[LightGBM] [Info] Number of data points in the train set: 37267, number of used features: 674\n",
       "[LightGBM] [Info] Start training from score 8.169855\n",
-      "[CV] END .......................lgbmregressor__num_leaves=50; total time=   2.3s\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.034603 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[CV] END ......................lgbmregressor__num_leaves=256; total time=  14.3s\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.117739 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 155219\n",
       "[LightGBM] [Info] Number of data points in the train set: 37267, number of used features: 674\n",
       "[LightGBM] [Info] Start training from score 11.678268\n",
-      "[CV] END .......................lgbmregressor__num_leaves=50; total time=   2.4s\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.032211 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 156723\n",
-      "[LightGBM] [Info] Number of data points in the train set: 37266, number of used features: 674\n",
-      "[LightGBM] [Info] Start training from score 13.482799\n",
-      "[CV] END .......................lgbmregressor__num_leaves=70; total time=   3.2s\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.038108 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 153420\n",
-      "[LightGBM] [Info] Number of data points in the train set: 37267, number of used features: 674\n",
-      "[LightGBM] [Info] Start training from score 8.169855\n",
-      "[CV] END .......................lgbmregressor__num_leaves=70; total time=   2.9s\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.035467 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 155219\n",
-      "[LightGBM] [Info] Number of data points in the train set: 37267, number of used features: 674\n",
-      "[LightGBM] [Info] Start training from score 11.678268\n",
-      "[CV] END .......................lgbmregressor__num_leaves=70; total time=   2.9s\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.033476 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 156723\n",
-      "[LightGBM] [Info] Number of data points in the train set: 37266, number of used features: 674\n",
-      "[LightGBM] [Info] Start training from score 13.482799\n",
-      "[CV] END ......................lgbmregressor__num_leaves=256; total time=   7.9s\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.037789 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 153420\n",
-      "[LightGBM] [Info] Number of data points in the train set: 37267, number of used features: 674\n",
-      "[LightGBM] [Info] Start training from score 8.169855\n",
-      "[CV] END ......................lgbmregressor__num_leaves=256; total time=   7.3s\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.032879 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 155219\n",
-      "[LightGBM] [Info] Number of data points in the train set: 37267, number of used features: 674\n",
-      "[LightGBM] [Info] Start training from score 11.678268\n",
-      "[CV] END ......................lgbmregressor__num_leaves=256; total time=   7.5s\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.045852 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[CV] END ......................lgbmregressor__num_leaves=256; total time=  19.9s\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.449260 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 159913\n",
       "[LightGBM] [Info] Number of data points in the train set: 55900, number of used features: 674\n",
       "[LightGBM] [Info] Start training from score 11.110286\n",
@@ -380,7 +386,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "taxi_env",
    "language": "python",
    "name": "python3"
   },
