--- a/notebooks/13_feature_pipeline.ipynb
+++ b/notebooks/13_feature_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "4aba119e-8624-4c30-ad3c-49759f3f18d4",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "d70f3626-766c-430f-97d9-ee5c9068c240",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-04 16:43:26.771324\n"
+      "2025-03-06 04:55:10.612630\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "98019378-2d7e-44d9-b6a3-794e640b2910",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "pandas._libs.tslibs.timestamps.Timestamp"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "8dfe29a0-f439-4e3b-8ad2-78eb40a3bde3",
    "metadata": {},
    "outputs": [],
@@ -72,17 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "e1ceac31-828d-4ca3-9ae3-19a0f4ec2ab8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.datetime64('2025-03-04T16:00:00.000000000')"
+       "numpy.datetime64('2025-03-06T04:00:00.000000000')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "id": "0a9eb28f-e6ea-44e6-aa60-05d8304691fc",
    "metadata": {},
    "outputs": [],
@@ -104,17 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "133fcfda-af02-43f0-8851-63ef10b778ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2025-03-04 16:00:00+0000', tz='UTC')"
+       "Timestamp('2025-03-06 04:00:00+0000', tz='UTC')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,17 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "ec2f9e79-58b1-4e18-9346-c93fc04e1f7c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2025-02-03 16:00:00+0000', tz='UTC')"
+       "Timestamp('2025-02-05 04:00:00+0000', tz='UTC')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "id": "dfaf545c-01d6-41dc-871d-c514c667bbce",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "id": "4e1669d5-cc0b-440b-8e8d-8bb78d16c58c",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,13 @@
      "output_type": "stream",
      "text": [
       "File already exists for 2024-02.\n",
-      "Loading data for 2024-02...\n",
+      "Loading data for 2024-02...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Total records: 3,007,526\n",
       "Valid records: 2,954,709\n",
       "Records dropped: 52,817 (1.76%)\n",
@@ -248,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "id": "22176c04-e64c-496a-9acd-6a6eb7bc2ff0",
    "metadata": {},
    "outputs": [
@@ -279,28 +285,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>849634</th>\n",
+       "      <th>712410</th>\n",
        "      <td>2025-02-12 16:25:44</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1156335</th>\n",
+       "      <th>1019111</th>\n",
        "      <td>2025-02-15 16:56:40</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18346</th>\n",
-       "      <td>2025-02-03 18:07:44</td>\n",
+       "      <th>695</th>\n",
+       "      <td>2025-02-05 05:47:46</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40050</th>\n",
-       "      <td>2025-02-04 04:14:50</td>\n",
+       "      <th>29486</th>\n",
+       "      <td>2025-02-05 12:33:19</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41651</th>\n",
-       "      <td>2025-02-04 06:08:40</td>\n",
+       "      <th>40769</th>\n",
+       "      <td>2025-02-05 14:12:17</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -309,53 +315,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2934367</th>\n",
-       "      <td>2025-03-04 15:58:54</td>\n",
+       "      <th>2958927</th>\n",
+       "      <td>2025-03-06 02:56:12</td>\n",
        "      <td>263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2936360</th>\n",
-       "      <td>2025-03-04 15:59:06</td>\n",
+       "      <th>2959280</th>\n",
+       "      <td>2025-03-06 03:11:27</td>\n",
        "      <td>263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2940026</th>\n",
-       "      <td>2025-03-04 15:59:13</td>\n",
+       "      <th>2959117</th>\n",
+       "      <td>2025-03-06 03:21:08</td>\n",
        "      <td>263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2983807</th>\n",
-       "      <td>2025-03-04 15:59:19</td>\n",
+       "      <th>2959236</th>\n",
+       "      <td>2025-03-06 03:29:48</td>\n",
        "      <td>263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2939057</th>\n",
-       "      <td>2025-03-04 15:59:58</td>\n",
+       "      <th>2959138</th>\n",
+       "      <td>2025-03-06 03:52:50</td>\n",
        "      <td>263</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2984127 rows × 2 columns</p>\n",
+       "<p>3026329 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "            pickup_datetime  pickup_location_id\n",
-       "849634  2025-02-12 16:25:44                   2\n",
-       "1156335 2025-02-15 16:56:40                   2\n",
-       "18346   2025-02-03 18:07:44                   3\n",
-       "40050   2025-02-04 04:14:50                   3\n",
-       "41651   2025-02-04 06:08:40                   3\n",
+       "712410  2025-02-12 16:25:44                   2\n",
+       "1019111 2025-02-15 16:56:40                   2\n",
+       "695     2025-02-05 05:47:46                   3\n",
+       "29486   2025-02-05 12:33:19                   3\n",
+       "40769   2025-02-05 14:12:17                   3\n",
        "...                     ...                 ...\n",
-       "2934367 2025-03-04 15:58:54                 263\n",
-       "2936360 2025-03-04 15:59:06                 263\n",
-       "2940026 2025-03-04 15:59:13                 263\n",
-       "2983807 2025-03-04 15:59:19                 263\n",
-       "2939057 2025-03-04 15:59:58                 263\n",
+       "2958927 2025-03-06 02:56:12                 263\n",
+       "2959280 2025-03-06 03:11:27                 263\n",
+       "2959117 2025-03-06 03:21:08                 263\n",
+       "2959236 2025-03-06 03:29:48                 263\n",
+       "2959138 2025-03-06 03:52:50                 263\n",
        "\n",
-       "[2984127 rows x 2 columns]"
+       "[3026329 rows x 2 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "id": "783eebf6-7c7d-4ef8-9134-a92c87123146",
    "metadata": {},
    "outputs": [],
@@ -377,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "id": "adbca6ba-f012-4f40-b419-ed620a8e7054",
    "metadata": {},
    "outputs": [
@@ -410,31 +416,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2025-02-03 16:00:00</td>\n",
+       "      <td>2025-02-05 04:00:00</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2025-02-03 17:00:00</td>\n",
+       "      <td>2025-02-05 05:00:00</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2025-02-03 18:00:00</td>\n",
+       "      <td>2025-02-05 06:00:00</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2025-02-03 19:00:00</td>\n",
+       "      <td>2025-02-05 07:00:00</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2025-02-03 20:00:00</td>\n",
+       "      <td>2025-02-05 08:00:00</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -445,58 +451,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174691</th>\n",
-       "      <td>2025-03-04 11:00:00</td>\n",
+       "      <th>175387</th>\n",
+       "      <td>2025-03-05 23:00:00</td>\n",
        "      <td>263</td>\n",
-       "      <td>98</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174692</th>\n",
-       "      <td>2025-03-04 12:00:00</td>\n",
+       "      <th>175388</th>\n",
+       "      <td>2025-03-06 00:00:00</td>\n",
        "      <td>263</td>\n",
-       "      <td>100</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174693</th>\n",
-       "      <td>2025-03-04 13:00:00</td>\n",
+       "      <th>175389</th>\n",
+       "      <td>2025-03-06 01:00:00</td>\n",
        "      <td>263</td>\n",
-       "      <td>100</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174694</th>\n",
-       "      <td>2025-03-04 14:00:00</td>\n",
+       "      <th>175390</th>\n",
+       "      <td>2025-03-06 02:00:00</td>\n",
        "      <td>263</td>\n",
-       "      <td>146</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174695</th>\n",
-       "      <td>2025-03-04 15:00:00</td>\n",
+       "      <th>175391</th>\n",
+       "      <td>2025-03-06 03:00:00</td>\n",
        "      <td>263</td>\n",
-       "      <td>126</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>174696 rows × 3 columns</p>\n",
+       "<p>175392 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "               pickup_hour  pickup_location_id  rides\n",
-       "0      2025-02-03 16:00:00                   2      0\n",
-       "1      2025-02-03 17:00:00                   2      0\n",
-       "2      2025-02-03 18:00:00                   2      0\n",
-       "3      2025-02-03 19:00:00                   2      0\n",
-       "4      2025-02-03 20:00:00                   2      0\n",
+       "0      2025-02-05 04:00:00                   2      0\n",
+       "1      2025-02-05 05:00:00                   2      0\n",
+       "2      2025-02-05 06:00:00                   2      0\n",
+       "3      2025-02-05 07:00:00                   2      0\n",
+       "4      2025-02-05 08:00:00                   2      0\n",
        "...                    ...                 ...    ...\n",
-       "174691 2025-03-04 11:00:00                 263     98\n",
-       "174692 2025-03-04 12:00:00                 263    100\n",
-       "174693 2025-03-04 13:00:00                 263    100\n",
-       "174694 2025-03-04 14:00:00                 263    146\n",
-       "174695 2025-03-04 15:00:00                 263    126\n",
+       "175387 2025-03-05 23:00:00                 263     28\n",
+       "175388 2025-03-06 00:00:00                 263     16\n",
+       "175389 2025-03-06 01:00:00                 263      6\n",
+       "175390 2025-03-06 02:00:00                 263      6\n",
+       "175391 2025-03-06 03:00:00                 263      4\n",
        "\n",
-       "[174696 rows x 3 columns]"
+       "[175392 rows x 3 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "id": "0b8f1dc6-46d6-4fad-915b-c8c4c02b9887",
    "metadata": {},
    "outputs": [
@@ -516,13 +522,13 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 174696 entries, 0 to 174695\n",
+      "RangeIndex: 175392 entries, 0 to 175391\n",
       "Data columns (total 3 columns):\n",
       " #   Column              Non-Null Count   Dtype         \n",
       "---  ------              --------------   -----         \n",
-      " 0   pickup_hour         174696 non-null  datetime64[ns]\n",
-      " 1   pickup_location_id  174696 non-null  int16         \n",
-      " 2   rides               174696 non-null  int16         \n",
+      " 0   pickup_hour         175392 non-null  datetime64[ns]\n",
+      " 1   pickup_location_id  175392 non-null  int16         \n",
+      " 2   rides               175392 non-null  int16         \n",
       "dtypes: datetime64[ns](1), int16(2)\n",
       "memory usage: 2.0 MB\n"
      ]
@@ -534,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "id": "0c2d5acd-0f97-4117-b61d-6135391891db",
    "metadata": {},
    "outputs": [
@@ -542,13 +548,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-04 11:43:29,028 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-03-05 23:55:15,126 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-03-04 11:43:29,032 INFO: Initializing external client\n",
-      "2025-03-04 11:43:29,032 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-03-04 11:43:29,788 INFO: Python Engine initialized.\n",
+      "2025-03-05 23:55:15,132 INFO: Initializing external client\n",
+      "2025-03-05 23:55:15,133 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-03-05 23:55:15,978 INFO: Python Engine initialized.\n",
       "\n",
-      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1215680\n"
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1214691\n"
      ]
     }
    ],
@@ -574,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "id": "b3093058-9e94-4b49-9ad9-32dace742a31",
    "metadata": {},
    "outputs": [
@@ -582,9 +588,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |████████████████████████████████████| Rows 174696/174696 | Elapsed Time: 00:09 | Remaining Time: 00:00\n",
-      "UserWarning: Materialization job is already running, aborting new execution.Please wait for the current execution to finish before triggering a new one.You can check the status of the current execution using `fg.materialization_job.get_state()`.or `fg.materialization_job.get_final_state()` or check it out in the Hopsworks UI.at https://c.app.hopsworks.ai:443/p/1215680/jobs/named/time_series_hourly_feature_group_1_offline_fg_materialization.\n",
-      "Use fg.materialization_job.run(args=-op offline_fg_materialization -path hdfs:///Projects/NYCTAXI_SP25/Resources/jobs/time_series_hourly_feature_group_1_offline_fg_materialization/config_1741068137303) to trigger the materialization job again.\n"
+      "Uploading Dataframe: 100.00% |██████████| Rows 175392/175392 | Elapsed Time: 00:09 | Remaining Time: 00:00\n",
+      "UserWarning: Materialization job is already running, aborting new execution.Please wait for the current execution to finish before triggering a new one.You can check the status of the current execution using `fg.materialization_job.get_state()`.or `fg.materialization_job.get_final_state()` or check it out in the Hopsworks UI.at https://c.app.hopsworks.ai:443/p/1214691/jobs/named/time_series_hourly_feature_group_1_offline_fg_materialization.\n",
+      "Use fg.materialization_job.run(args=-op offline_fg_materialization -path hdfs:///Projects/janardhan/Resources/jobs/time_series_hourly_feature_group_1_offline_fg_materialization/config_1741233068122) to trigger the materialization job again.\n"
      ]
     },
     {
@@ -594,7 +600,7 @@
        " None)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +620,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "taxi_env",
    "language": "python",
    "name": "python3"
   },
